--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.email qq00891829@icloud.com
           git add -A .
           git commit -m "generated"
           git push
